<resources>
    <string name="app_name">DemoApp</string>
    <string name="tab_description">Page indicator for navigating through content</string>
    <string name="first_page_title">Lorem Ipsum</string>
    <string name="first_page_description">Cillum laborum ex consectetur officia mollit&#46; Deserunt dolore irure Lorem sunt aute consequat laboris in culpa elit&#46; Laboris id occaecat do occaecat non minim cupidatat&#46;</string>
    <string name="second_page_title">Pokemon Ipsum</string>
    <string name="second_page_description">Through the power of meditation&#44; Medicham developed its sixth sense&#46; It gained the ability to use psychokinetic powers&#46; This Pokémon is known to meditate for a whole month without eating&#46;</string>
    <string name="third_page_title">Samuel Ipsum</string>
    <string name="third_page_description">Do you see any Teletubbies in here&#63; Do you see a slender plastic tag clipped to my shirt with my name printed on it&#63; Do you see a little Asian child with a blank expression on his face sitting outside on a mechanical helicopter that shakes when you put quarters in it&#63;</string>
    <string name="btn_done">Done</string>
    <string name="txt_welcome">Welcome</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_dont_have_account">Don\'t have a Account&#63;&#160;</string>
    <string name="btn_register">Register</string>
    <string name="txt_register">Register</string>
    <string name="txt_first_name">First Name</string>
    <string name="txt_last_name">Last Name</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="txt_already_member">Already A Member&#63;&#160;</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="login_validation_message">Please ensure you enter both your username and password to log in&#46; Make sure all fields are filled in before attempting to log in again&#46;</string>
    <string name="signup_validation_message">To sign up&#44; please make sure to provide your first name&#44; last name&#44; username&#44; and password&#46; Ensure that all fields are filled in before attempting to proceed with the sign&#8208;up process&#46;</string>
    <string name="list_description">List of User Profiles</string>
    <string name="user_profile_description">User Profile Picture</string>
    <string name="user_display_name">%1$s %2$s. %3$s</string>
    <string name="txt_birthdate">Birthdate</string>
    <string name="txt_mothers_maiden_name">Mother\'s Maiden Name</string>
    <string name="txt_ssn">SSN</string>
    <string name="txt_geo_coordinates">Geo Coordinates</string>
    <string name="txt_phone">Phone</string>
    <string name="txt_country_code">Country Code</string>
    <string name="txt_birthday">Birthday</string>
    <string name="txt_age">Age</string>
    <string name="txt_online">Online</string>
    <string name="txt_email_address">Email Address</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_website">Website</string>
    <string name="txt_browser_user_agent">Browser User Agent</string>
    <string name="txt_finance">Finance</string>
    <string name="txt_expires">Expires</string>
    <string name="txt_iban">iban</string>
    <string name="txt_employment">Employment</string>
    <string name="txt_employment_company">Company</string>
    <string name="txt_employment_occupation">Occupation</string>
    <string name="txt_physical_characteristics">Physical Characteristics</string>
    <string name="txt_physical_height">Height</string>
    <string name="txt_physical_weight">Weight</string>
    <string name="txt_physical_blood_type">Blood Type</string>
    <string name="txt_other">Other</string>
    <string name="txt_other_ein">EIN</string>
    <string name="txt_other_university">University</string>

</resources>