<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/userDetailsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/profilePictureUserDetailsImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            tools:src="@color/placeholderColor"
            android:contentDescription="@string/user_profile_description" />

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Carolina H. Doyle"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="150 Carter Street"/>

        <TextView
            android:id="@+id/postalAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Manchester, CT 06040"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_mothers_maiden_name" />

        <TextView
            android:id="@+id/maidenNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Maggio"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_ssn"/>

        <TextView
            android:id="@+id/ssnTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="487-28-XXXX"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_geo_coordinates"/>

        <TextView
            android:id="@+id/coordinatesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            tools:text="41.76556000000001, -72.473091"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/txt_phone"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_phone"/>

        <TextView
            android:id="@+id/phoneUserDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="461-145-4186"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_country_code"/>

        <TextView
            android:id="@+id/countryCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            tools:text="+86"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/txt_birthday"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_birthday"/>

        <TextView
            android:id="@+id/birthdayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="March 30, 1989"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_age"/>

        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="34 years old"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/txt_online"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_email_address"/>

        <TextView
            android:id="@+id/emailUserDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="yraigatt3@nature.com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_username"/>

        <TextView
            android:id="@+id/usernameUserDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="yraigatt3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_password"/>

        <TextView
            android:id="@+id/passwordUserDetailsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="sRQxjPfdS"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_website"/>

        <TextView
            android:id="@+id/domainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            tools:text="homestead.com"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_browser_user_agent"/>

        <TextView
            android:id="@+id/userAgentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="5dp"
            tools:text="Mozilla/5.0 (Windows NT 6.2; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.17 Safari/537.11"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textAllCaps="true"
            android:text="@string/txt_finance"/>

        <TextView
            android:id="@+id/cardTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="JCB"/>

        <TextView
            android:id="@+id/cardNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="3580 0478 7936 9323"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_expires"/>

        <TextView
            android:id="@+id/cardExpireTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="07/2024"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/txt_iban"/>

        <TextView
            android:id="@+id/ibanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            tools:text="KZ43 658B M6VS TZOU OXSO"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_employment"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_employment_company"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/companyNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            tools:text="Wolff and Sons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_employment_occupation"/>

        <TextView
            android:id="@+id/companyTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            tools:text="Paralegal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/txt_physical_characteristics"
            android:textAllCaps="true"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_physical_height"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5' 7' (170 centimeters)"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_physical_weight"/>

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="171.6 pounds (78.0 kilograms)"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_physical_blood_type"/>

        <TextView
            android:id="@+id/bloodTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            tools:text="B+" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:text="@string/txt_other"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_other_ein"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/einTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="71-3644334"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/txt_other_university" />

        <TextView
            android:id="@+id/universityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Shenyang Pharmaceutical University"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
</ScrollView>