<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:searchIcon="@drawable/ic_search_magnifying_glass"
        android:closeIcon="@drawable/ic_close_xmark"
        android:queryHint="Search..."
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/firstNameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_first_name"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toStartOf="@id/searchView"
        app:layout_constraintEnd_toStartOf="@id/lastNameCheckBox"
        android:checked="true"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/lastNameCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_last_name"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toEndOf="@id/firstNameCheckBox"
        app:layout_constraintEnd_toStartOf="@id/birthdateCheckBox"
        app:layout_constraintHorizontal_bias="0.5"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/birthdateCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_birthdate"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintStart_toEndOf="@id/lastNameCheckBox"
        app:layout_constraintEnd_toEndOf="@id/searchView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_user"
        android:contentDescription="@string/list_description"
        app:layout_constraintTop_toBottomOf="@id/lastNameCheckBox" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/usersListProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>