<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:indeterminate="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/txt_welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/welcomeTextView"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxBackgroundColor="@color/textInputLayoutBackgroundColor"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        android:hint="@string/hint_username"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username_envelope"
            android:drawablePadding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/usernameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxBackgroundColor="@color/textInputLayoutBackgroundColor"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        android:hint="@string/hint_password"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_key"
            android:drawablePadding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:textColor="@color/buttonTextColor"/>

    <TextView
        android:id="@+id/dontHaveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dont_have_account"
        app:layout_constraintTop_toTopOf="@id/registerButton"
        app:layout_constraintStart_toStartOf="@id/loginButton"
        app:layout_constraintEnd_toStartOf="@id/registerButton"
        app:layout_constraintBottom_toBottomOf="@id/registerButton"
        app:layout_constraintBaseline_toBaselineOf="@id/registerButton"
        android:textColor="@color/textViewColor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="0dp"
        android:paddingHorizontal="0dp"
        android:minWidth="0dp"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/btn_register"
        app:layout_constraintStart_toEndOf="@id/dontHaveAccountTextView"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/loginButton"
        android:textColor="@color/textColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>
