<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/registerProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:indeterminate="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/txt_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/registerTextView"
        app:layout_constraintTop_toBottomOf="@id/registerTextView"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxBackgroundColor="@color/textInputLayoutBackgroundColor"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        android:hint="@string/txt_first_name"
        android:layout_marginTop="30dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_fullname_user"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastNameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/firstNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/firstNameTextInputLayout"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxBackgroundColor="@color/textInputLayoutBackgroundColor"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        android:hint="@string/txt_last_name"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_fullname_user"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/lastNameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/lastNameTextInputLayout"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxBackgroundColor="@color/textInputLayoutBackgroundColor"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        android:hint="@string/hint_username"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_username_envelope"
            android:drawablePadding="10dp"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/usernameTextInputLayout"
        app:layout_constraintTop_toBottomOf="@id/usernameTextInputLayout"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxBackgroundColor="@color/textInputLayoutBackgroundColor"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        android:hint="@string/hint_password"
        android:layout_marginTop="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_password_key"
            android:drawablePadding="10dp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextInputLayout"
        android:textColor="@color/buttonTextColor"/>

    <TextView
        android:id="@+id/alreadyMemberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_already_member"
        app:layout_constraintTop_toTopOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="@id/signUpButton"
        app:layout_constraintEnd_toStartOf="@id/signInButton"
        app:layout_constraintBottom_toBottomOf="@id/signInButton"
        app:layout_constraintBaseline_toBaselineOf="@id/signInButton"
        android:textColor="@color/textViewColor"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingVertical="0dp"
        android:paddingHorizontal="0dp"
        android:minWidth="48dp"
        style="@style/Widget.Material3.Button.TextButton"
        android:text="@string/btn_sign_in"
        app:layout_constraintStart_toEndOf="@id/alreadyMemberTextView"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:layout_constraintEnd_toEndOf="@id/signUpButton"
        android:textColor="@color/textColor"/>

</androidx.constraintlayout.widget.ConstraintLayout>
